Allow multiple modifiers for one attribute