@@ -1,6 +1,7 @@
 package net.threetag.palladium.power.ability;
 
 import com.google.gson.JsonPrimitive;
+import com.mojang.serialization.Codec;
 import com.mojang.serialization.Dynamic;
 import com.mojang.serialization.JsonOps;
 import com.mojang.serialization.MapCodec;
@@ -14,43 +15,30 @@ import net.minecraft.world.entity.ai.attributes.Attribute;
 import net.minecraft.world.entity.ai.attributes.AttributeInstance;
 import net.minecraft.world.entity.ai.attributes.AttributeModifier;
 import net.minecraft.world.entity.ai.attributes.Attributes;
+import net.neoforged.neoforge.common.util.NeoForgeExtraCodecs;
 import net.threetag.palladium.documentation.CodecDocumentationBuilder;
-import net.threetag.palladium.documentation.SettingType;
 import net.threetag.palladium.logic.context.DataContext;
+import net.threetag.palladium.logic.value.MoonPhaseValue;
 import net.threetag.palladium.logic.value.StaticValue;
 import net.threetag.palladium.logic.value.Value;
 import net.threetag.palladium.power.energybar.EnergyBarUsage;
-import org.jetbrains.annotations.Nullable;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class AttributeModifierAbility extends Ability {
 
     public static final MapCodec<AttributeModifierAbility> CODEC = RecordCodecBuilder.mapCodec(instance ->
             instance.group(
-                    Attribute.CODEC.fieldOf("attribute").forGetter(ab -> ab.attribute),
-                    Value.CODEC.fieldOf("amount").forGetter(ab -> ab.amount),
-                    AttributeModifier.Operation.CODEC.fieldOf("operation").forGetter(ab -> ab.operation),
-                    Identifier.CODEC.optionalFieldOf("id").forGetter(ab -> Optional.ofNullable(ab.id)),
+                    NeoForgeExtraCodecs.singularOrPluralCodec(DynamicModifier.CODEC, "modifier").forGetter(ab -> ab.modifiers),
                     propertiesCodec(), stateCodec(), energyBarUsagesCodec()
-            ).apply(instance, (att, amount, op, id, prop, state, bar) ->
-                    new AttributeModifierAbility(att, amount, op, id.orElse(null), prop, state, bar)));
+            ).apply(instance, AttributeModifierAbility::new));
 
-    public final Holder<Attribute> attribute;
-    public final Value amount;
-    public final AttributeModifier.Operation operation;
-    public final @Nullable Identifier id;
+    public final Set<DynamicModifier> modifiers;
 
-    public AttributeModifierAbility(Holder<Attribute> attribute, Value amount, AttributeModifier.Operation operation, @Nullable Identifier id, AbilityProperties properties, AbilityStateManager conditions, List<EnergyBarUsage> energyBarUsages) {
+    public AttributeModifierAbility(Set<DynamicModifier> modifiers, AbilityProperties properties, AbilityStateManager conditions, List<EnergyBarUsage> energyBarUsages) {
         super(properties, conditions, energyBarUsages);
-        this.attribute = attribute;
-        this.amount = amount;
-        this.operation = operation;
-        this.id = id;
+        this.modifiers = modifiers;
     }
 
     @Override
@@ -58,35 +46,41 @@ public class AttributeModifierAbility extends Ability {
         return AbilitySerializers.ATTRIBUTE_MODIFIER.get();
     }
 
-    public static Identifier getModifierId(AbilityInstance<AttributeModifierAbility> abilityInstance) {
-        var id = abilityInstance.getAbility().id;
-        var ref = abilityInstance.getReference();
-        return id != null ? id : Identifier.fromNamespaceAndPath(Objects.requireNonNull(ref.powerId()).getNamespace(), ref.powerId().getPath() + "_" + ref.abilityKey());
+    public static Identifier getModifierId(AbilityInstance<AttributeModifierAbility> abilityInstance, DynamicModifier modifier, int index) {
+        return modifier.id().orElseGet(() -> {
+            var ref = abilityInstance.getReference();
+            return Identifier.fromNamespaceAndPath(Objects.requireNonNull(ref.powerId()).getNamespace(), ref.powerId().getPath() + "_" + ref.abilityKey() + "_" + index);
+        });
     }
 
     @SuppressWarnings("unchecked")
     @Override
     public boolean tick(LivingEntity entity, AbilityInstance<?> ability, boolean enabled) {
-        if (enabled) {
-            AttributeInstance attributeInstance = entity.getAttribute(this.attribute);
-            var id = getModifierId((AbilityInstance<AttributeModifierAbility>) ability);
+        if (enabled && !entity.level().isClientSide()) {
+            int i = 0;
+            for (DynamicModifier dynamicModifier : this.modifiers) {
+                AttributeInstance attributeInstance = entity.getAttribute(dynamicModifier.attribute());
 
-            if (attributeInstance == null || entity.level().isClientSide()) {
-                return false;
-            }
+                if (attributeInstance == null) {
+                    continue;
+                }
 
-            AttributeModifier modifier = attributeInstance.getModifier(id);
+                var id = getModifierId((AbilityInstance<AttributeModifierAbility>) ability, dynamicModifier, i);
+                AttributeModifier modifier = attributeInstance.getModifier(id);
 
-            // Remove modifier if amount or operation don't match
-            double amount = this.amount.getAsDouble(DataContext.forAbility(entity, ability)) * ability.getAnimationTimerProgressEased(1F);
-            if (modifier != null && (modifier.amount() != amount || modifier.operation() != this.operation)) {
-                attributeInstance.removeModifier(id);
-                modifier = null;
-            }
+                // Remove modifier if amount or operation don't match
+                double amount = dynamicModifier.amount().getAsDouble(DataContext.forAbility(entity, ability)) * ability.getAnimationTimerProgressEased(1F);
+                if (modifier != null && (modifier.amount() != amount || modifier.operation() != dynamicModifier.operation())) {
+                    attributeInstance.removeModifier(id);
+                    modifier = null;
+                }
 
-            if (modifier == null) {
-                modifier = new AttributeModifier(id, amount, this.operation);
-                attributeInstance.addTransientModifier(modifier);
+                if (modifier == null) {
+                    modifier = new AttributeModifier(id, amount, dynamicModifier.operation());
+                    attributeInstance.addTransientModifier(modifier);
+                }
+
+                i++;
             }
 
             return true;
@@ -99,16 +93,34 @@ public class AttributeModifierAbility extends Ability {
     @SuppressWarnings("unchecked")
     @Override
     public void lastTick(LivingEntity entity, AbilityInstance<?> instance) {
-        var attributeInstance = entity.getAttribute(this.attribute);
-        var id = getModifierId((AbilityInstance<AttributeModifierAbility>) instance);
+        int i = 0;
+        for (DynamicModifier dynamicModifier : this.modifiers) {
+            var attributeInstance = entity.getAttribute(dynamicModifier.attribute());
+            var id = getModifierId((AbilityInstance<AttributeModifierAbility>) instance, dynamicModifier, i);
 
-        if (attributeInstance != null && attributeInstance.getModifier(id) != null) {
-            attributeInstance.removeModifier(id);
+            if (attributeInstance != null && attributeInstance.getModifier(id) != null) {
+                attributeInstance.removeModifier(id);
+            }
+
+            i++;
         }
     }
 
     public static String getAttributeList() {
         return BuiltInRegistries.ATTRIBUTE.keySet().stream().map(Identifier::toString).sorted(Comparator.naturalOrder()).collect(Collectors.joining(", "));
+    }
+
+    public record DynamicModifier(Holder<Attribute> attribute, Optional<Identifier> id, Value amount,
+                                  AttributeModifier.Operation operation) {
+        public static final Codec<DynamicModifier> CODEC = RecordCodecBuilder.create(
+                instance -> instance.group(
+                                Attribute.CODEC.fieldOf("attribute").forGetter(DynamicModifier::attribute),
+                                Identifier.CODEC.optionalFieldOf("id").forGetter(DynamicModifier::id),
+                                Value.CODEC.fieldOf("amount").forGetter(DynamicModifier::amount),
+                                AttributeModifier.Operation.CODEC.fieldOf("operation").forGetter(DynamicModifier::operation)
+                        )
+                        .apply(instance, DynamicModifier::new)
+        );
     }
 
     public static class Serializer extends AbilitySerializer<AttributeModifierAbility> {
@@ -121,11 +133,14 @@ public class AttributeModifierAbility extends Ability {
         @Override
         public void addDocumentation(CodecDocumentationBuilder<Ability, AttributeModifierAbility> builder, HolderLookup.Provider provider) {
             builder.setDescription("Adds an attribute modifier to the entity while the ability is enabled.")
-                    .add("attribute", TYPE_ATTRIBUTE, "Determines which attribute should be modified. Possible attributes: " + getAttributeList())
-                    .add("amount", TYPE_DOUBLE, "The amount for the giving attribute modifier")
-                    .add("operation", SettingType.enumList(AttributeModifier.Operation.values()), "The operation for the attribute modifier (More: https://minecraft.gamepedia.com/Attribute#Operations)")
-                    .addOptional("id", TYPE_STRING, "Sets the unique identifier for this attribute modifier. Will fallback to a generated one based on the ability/power ID.")
-                    .addExampleObject(new AttributeModifierAbility(Attributes.ARMOR, new StaticValue(new Dynamic<>(JsonOps.INSTANCE, new JsonPrimitive(1D))), AttributeModifier.Operation.ADD_VALUE, null, AbilityProperties.BASIC, AbilityStateManager.EMPTY, List.of()));
+                    .add("modifier(s)", TYPE_ATTRIBUTE_MODIFIER, "The attribute modifier(s) that will be applied")
+                    .addExampleObject(new AttributeModifierAbility(new HashSet<>(List.of(
+                            new DynamicModifier(Attributes.ARMOR, Optional.empty(), new StaticValue(new Dynamic<>(JsonOps.INSTANCE, new JsonPrimitive(1D))), AttributeModifier.Operation.ADD_VALUE)
+                    )), AbilityProperties.BASIC, AbilityStateManager.EMPTY, List.of()))
+                    .addExampleObject(new AttributeModifierAbility(new HashSet<>(Arrays.asList(
+                            new DynamicModifier(Attributes.MOVEMENT_SPEED, Optional.empty(), new StaticValue(new Dynamic<>(JsonOps.INSTANCE, new JsonPrimitive(5D))), AttributeModifier.Operation.ADD_MULTIPLIED_BASE),
+                            new DynamicModifier(Attributes.JUMP_STRENGTH, Optional.empty(), new MoonPhaseValue(""), AttributeModifier.Operation.ADD_MULTIPLIED_TOTAL)
+                    )), AbilityProperties.BASIC, AbilityStateManager.EMPTY, List.of()));
         }
     }
 }
